--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "platform.js": "platform#^1.3.1"
   },
   "dependencies": {
-    "ng.connector.services": "https://github.com/wariyum/ng.connector.service.git#v0.5"
+    "ng.connector.services": "https://github.com/wariyum/ng.connector.service.git#v0.5",
+    "ng-lodash": "^0.5.0"
   }
 }
