--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,13 @@
     "ng.connector.services": "https://github.com/wariyum/ng.connector.service.git#v0.5",
     "ng-lodash": "^0.5.0",
     "ionic-cache-src": "^0.7.3",
-    "ionic-toast": "^0.4.1"
+    "ionic-toast": "^0.4.1",
+    "angular-moment": "^1.0.1"
+  },
+  "resolutions": {
+    "ionic": "1.3.1",
+    "angular": "1.5.3",
+    "angular-animate": "1.5.3",
+    "angular-sanitize": "1.5.3"
   }
 }
